2006-10-08 Tim
 PATCH: [ 1573243 ] Web: Add info and link for developers-wiki
  Web\developer: needed.php

2006-10-07 Tim
 BUG: [ 1572388 ] Wrong link to regex.pdf
  Web: links.php
 Cool, Perry is back! :)
  Web\developer: developers.xml

2006-10-03 Tim
 PATCH: [ 1569431 ] Couple of typos in Translations -page
  Web\developer\l10n: index.php

2006-10-01 Tim
 PATCH: [ 1566474 ] Web: Improve translations index page
  Web\developer\l10n: index.php
 PATCH: [ 1566613 ] Web: Improve Developers Needed -page
  Web: page.inc
  Web\developer: needed.php
 BUG: [ 1566593 ] Download .exe file for 7-Zip Plugin
  Web: downloads.php
 Add "Vaild HTML/CSS" images again.
  Web\images: added valid-css.gif valid-html401.gif

2006-09-26 Tim
 PATCH [ 1565841 ] Web: Catalan translation is updated
  Web\developer\l10n: status.xml

2006-09-25 Tim
 PATCH: [ 1564395 ] Update Spanish translation status
  Web\developer\l10n: status.xml

2006-09-23 Tim
 PATCH: [ 1561419 ] Web: Don't print ads
  Web\css: print.css

2006-09-18 Tim
 PATCH: [ 1559508 ] Change kimmov's email address
  Web\developer: developers.xml

2006-09-16 Christian
 PATCH: [ 1543687 ] Google AdSense setup
  Re-inserted the ads, after change to our own site
  Web: page.inc
  Web\css: all.css

2006-09-14 Tim
 PATCH: [ 1558862 ] Web: Tidying web-pages (Part 1)
  Web: index.php
  Web\2.4: index.php
  Web\2.2: index.php
  Web\2.0: index.php

2006-09-12 Tim
 PATCH: [ 1557373 ] Japanese and Swedish translations are ready for 2.6
  Web\developer\l10n: status.php status.xml

2006-09-11 Tim
 RFE: [ 1552813 ] Web: Mark developers active/inactive
  Web\developer: developers.xml index.php

2006-09-10 Tim
 PATCH: [ 1555810 ] Bulgarian translation status/translator update
  Web\developer\l10n: status.xml

2006-09-05 Tim
 BUG: [ 1552149 ] Web: CVS link in sidebar
  Web: links.php page.inc
  Web\developer: index.php
  Web\developer\l10n: instructions.php

2006-09-04 Tim
 PATCH: [ 1552144 ] Web: Fixes to developers-needed -page